--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,7 +78,41 @@ body {
     top: 40%;
   }
 
-.choice {
+  #restart {
+    display: inline-block;
+    -webkit-box-sizing: content-box;
+    -moz-box-sizing: content-box;
+    box-sizing: content-box;
+    cursor: pointer;
+    padding: 10px 20px;
+    border: 1px solid #018dc4;
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+    font: normal 21px/normal "Times New Roman", Times, serif;
+    color: rgba(255,255,255,0.9);
+    -o-text-overflow: clip;
+    text-overflow: clip;
+    background: -webkit-linear-gradient(-90deg, rgba(157,213,58,1) 0, rgba(161,213,79,1) 50%, rgba(99,132,45,1) 69%, rgba(124,188,10,1) 100%), #3291d1;
+    background: -moz-linear-gradient(180deg, rgba(157,213,58,1) 0, rgba(161,213,79,1) 50%, rgba(99,132,45,1) 69%, rgba(124,188,10,1) 100%), #3291d1;
+    background: linear-gradient(180deg, rgba(157,213,58,1) 0, rgba(161,213,79,1) 50%, rgba(99,132,45,1) 69%, rgba(124,188,10,1) 100%), #3291d1;
+    background-repeat: repeat-y;
+    background-position: 10% 50%;
+    -webkit-background-origin: padding-box;
+    background-origin: padding-box;
+    -webkit-background-clip: border-box;
+    background-clip: border-box;
+    -webkit-background-size: auto auto;
+    background-size: auto auto;
+    -webkit-box-shadow: 2px 2px 2px 0 rgba(0,0,0,0.2) ;
+    box-shadow: 2px 2px 2px 0 rgba(0,0,0,0.2) ;
+    text-shadow: -1px -1px 0 rgba(15,73,168,0.66) ;
+    -webkit-transition: all 300ms cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    -moz-transition: all 300ms cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    -o-transition: all 300ms cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    transition: all 300ms cubic-bezier(0.755, 0.05, 0.855, 0.06);
+  }
+
+ .choice {
     background: #34d9d9;
     background-image: -webkit-linear-gradient(top, #34d9d9, #2bb850);
     background-image: -moz-linear-gradient(top, #34d9d9, #2bb850);
